--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -9,37 +9,42 @@
         <input type="text" name="searchVal" id="searchVal">
         <button type="submit">Search</button>
     </form>
+    
+    <!-- THIS IS THE BASE MAP -->
+    <img src="https://developers.onemap.sg/commonapi/staticmap/getStaticImage?layerchosen=default&lat=1.31955&lng=103.84223&zoom=11&height=512&width=512">
 
-    {% if searchResult %}
-        <p>
-            Your results are:
-            <br> <br> <br>
-            Items found: {{ searchResult.found }}
-            <hr>
-            Number of pages: {{ searchResult.totalNumPages }}
-            <hr>
-            Page Number: {{ searchResult.pageNum }}
-            <hr>
-            {% for result in searchResult.results %}
-                Location: {{ result.searchVal }} <br>
-                Block Number: {{ result.BLK_NO }} <br>
-                Road Name: {{ result.ROAD_NAME }} <br>
-                Building: {{ result.BUILDING }} <br>
-                Address: {{ result.ADDRESS }} <br>
-                Postal: {{ result.POSTAL }} <br>
-                X-coordinate: {{ result.X }} <br>
-                Y-coordinate: {{ result.Y }} <br>
-                Latitude: {{ result.LATITUDE }} <br>
-                Longitude: {{ result.LONGITUDE }} <br>
-
-                <img src="https://developers.onemap.sg/commonapi/staticmap/getStaticImage?layerchosen=default&lat={{result.LATITUDE}}&lng={{result.LONGITUDE}}&zoom=17&height=512&width=512">
-
+    <div id="resultsList">
+        {% if searchResult %}
+            <p>
+                Your results are:
+                <br> <br> <br>
+                Items found: {{ searchResult.found }}
                 <hr>
-            {% endfor %}
-        </p>
+                Number of pages: {{ searchResult.totalNumPages }}
+                <hr>
+                Page Number: {{ searchResult.pageNum }}
+                <hr>
+                {% for result in searchResult.results %}
+                <div id="result">
+                    Location: {{ result.searchVal }} <br>
+                    Block Number: {{ result.BLK_NO }} <br>
+                    Road Name: {{ result.ROAD_NAME }} <br>
+                    Building: {{ result.BUILDING }} <br>
+                    Address: {{ result.ADDRESS }} <br>
+                    Postal: {{ result.POSTAL }} <br>
+                    X-coordinate: {{ result.X }} <br>
+                    Y-coordinate: {{ result.Y }} <br>
+                    Latitude: {{ result.LATITUDE }} <br>
+                    Longitude: {{ result.LONGITUDE }} <br>
 
-        <script src="{% static '/js/map.js' %}"></script>
+                    <img src="https://developers.onemap.sg/commonapi/staticmap/getStaticImage?layerchosen=default&lat={{result.LATITUDE}}&lng={{result.LONGITUDE}}&zoom=17&height=512&width=512">
+                </div>
+                <hr>
+                {% endfor %}
+            </p>
+
     {% endif %}
+    </div>
    
 
 {% endblock content %}
