--- a/src/components/MLAlgo.css
+++ b/src/components/MLAlgo.css
@@ -1,13 +1,27 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
+
+body{
+    padding: 0;
+    margin: 0;
+
+    font-family: Poppins, sans-serif;
+    font-size: 4rem;
+    color: white;
+    min-height: 100vh;
+}
+
 .MLAlgo{
     justify-content: center;
     align-items: center;
     font-size: 30px;
     color: white;
+    background-color: #355C7D;
 }
 
 .Inner{
     margin: 0px 100px 100px 100px;
     background-color: rgba(72, 72, 72, 0.4);
+    background-color: #355C7D;
 }
 
 
