--- a/src/components/GoogleMap.css
+++ b/src/components/GoogleMap.css
@@ -4,9 +4,10 @@
     height: 5rem;
     border: solid 2px;
     margin-top: 1rem;
-    border-radius: 30px;
+    border-radius: 5px;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
 .SB_suggestions{
     display: flex;
@@ -14,11 +15,25 @@
     flex-direction: column;
 }
 .autocomplete-dropdown-container{
-    text-align: left;
-    position: relative;
+    position: static;
+    font-size: medium;
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+    color: rgb(5, 5, 5);
+    border-color: black;
+    border: solid 2px;
 }
+.suggestion.active{
+  position: absolute;
+  font-size: medium;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
 
 .main-page-wrapper {
     margin: 15px;
