Edited some of the styling for the search bar

--- a/src/components/GoogleMap.css
+++ b/src/components/GoogleMap.css
@@ -1,5 +1,6 @@
 .location-search-input{
     align-items: center;
+    flex-grow: 1;
     text-align: center;
     height: 5rem;
     border: solid 2px;
@@ -10,9 +11,13 @@
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
 .SB_suggestions{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+  margin: 2rem;
+  display: grid;
+  width:100%;
+  grid-template-columns: 1fr;
+  justify-content: center;
+  flex-direction: column;
+    
 }
 .autocomplete-dropdown-container{
     position: static;
