--- a/src/components/ContactUs.css
+++ b/src/components/ContactUs.css
@@ -5,9 +5,6 @@ body{
     margin: 0;
     background-color: #355C7D;
     font-family: Poppins, sans-serif;
-    font-size: 4rem;
-    color: white;
-    min-height: 100vh;
 }
 
 .contactus-form{
@@ -17,4 +14,25 @@ body{
     margin-right: 30%;
     padding: 2rem 4rem;
     border-radius: 20px;
+    font-size: 4rem;
+    color: white;
+}
+
+.redirect{
+    background-color: #C56C86;
+    border-radius: .5rem;
+    padding: 1rem 1.5rem;
+    color: inherit;
+    text-decoration: none;
+    font-size: .9rem;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    font-size: medium;
+    width: 530px;
+}
+
+#contactusnow{
+    text-align: center;
+    margin: auto;
 }
