--- a/src/components/LogIn.css
+++ b/src/components/LogIn.css
@@ -5,9 +5,6 @@ body{
     margin: 0;
     background-color: #355C7D;
     font-family: Poppins, sans-serif;
-    font-size: 4rem;
-    color: white;
-    min-height: 100vh;
 }
 
 .welcome-back-message{
@@ -16,6 +13,8 @@ body{
     padding-top: 150px;
     padding-bottom: 10px;
     text-align: center;
+    font-size: 4rem;
+    color: white;
 }
 
 .log-in-body {
@@ -23,6 +22,7 @@ body{
     font-weight: 200;
     display: flex;
     flex-direction: column;
+    color: white;
 }
 
 .button{
@@ -99,6 +99,7 @@ body{
 
 .join-now-message{
     text-align: center;
+    font-size: medium;
 }
 
 .password-reset{
