--- a/src/components/Pwordresetcomponent.css
+++ b/src/components/Pwordresetcomponent.css
@@ -5,11 +5,6 @@ body{
     margin: 0;
     background-color: #355C7D;
     font-family: Poppins, sans-serif;
-    font-size: 4rem;
-    color: white;
-    max-height: 100vh;
-    max-width: 100vw;
-    
 }
 
 .button{
@@ -41,9 +36,13 @@ body{
     font-size: 0.25em;
     font-weight: 200;
     background-color: black;
-    width: 30vw;
-    max-width: 40%;
+    width: 40vw;
     padding: 2rem 4rem;
     border-radius: 20px;
     margin: auto;
+}
+
+.pwordreset-body{
+    font-size: 4rem;
+    color: white;
 }
