--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -1,118 +1,68 @@
+.wrapper_card {
+  margin: 2rem;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 1fr;
+  justify-content: center;
+  flex-direction: column;
+
+}
+
 .cards {
-  padding: 4rem;
-  background: #fff;
-}
-
-h1 {
-  text-align: center;
-}
-
-.cards__container {
+  box-shadow: 0 0 10px 5px #4f546c;
+  border-radius: 0.2rem;
+  min-width: 28rem;
   display: flex;
-  flex-flow: column;
-  align-items: center;
-  max-width: 1120px;
-  width: 90%;
-  margin: 0 auto;
+  flex-direction: row;
+  background-color: #090084;
+  font-size:large;
+  
 }
 
-.cards__wrapper {
-  position: relative;
-  margin: 50px 0 45px;
-}
 
-.cards__items {
-  margin-bottom: 24px;
-}
-
-.cards__item {
-  display: flex;
-  flex: 1;
-  margin: 0 1rem;
-  border-radius: 10px;
-}
-
-.cards__item__link {
-  display: flex;
-  flex-flow: column;
-  width: 100%;
-  box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
-  -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
-  filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
-  border-radius: 10px;
-  overflow: hidden;
-  text-decoration: none;
-}
-
-.cards__item__pic-wrap {
-  position: relative;
-  width: 100%;
-  padding-top: 67%;
-  overflow: hidden;
-}
-
-.fade-img {
-  animation-name: fade-img;
-  animation-duration: 2s;
-}
-
-.cards__item__pic-wrap::after {
-  content: attr(data-category);
-  position: absolute;
-  bottom: 0;
-  margin-left: 10px;
-  padding: 6px 8px;
-  max-width: calc((100%) - 60px);
-  font-size: 12px;
-  font-weight: 700;
-  color: #fff;
-  background-color: #1f98f4;
-  box-sizing: border-box;
-}
-
-.cards__item__img {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  display: block;
-  width: 100%;
-  max-width: 100%;
-  height: 100%;
-  max-height: 100%;
+/* .card__img */
+.cards__img {
+  width: 6rem;
+  height: 6rem;
   object-fit: cover;
-  transition: all 0.2s linear;
+  margin:1rem;
 }
 
-.cards__item__img:hover {
-  transform: scale(1.1);
+.cards__body {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  flex-grow: 1;
+  align-items: center;
+  justify-content: center;
 }
 
-.cards__item__info {
-  padding: 20px 30px 30px;
+/* .card__bedroom */
+.cards__description {
+  margin-bottom: 0.5rem;
+  margin-left: 1rem;
+  flex-grow: 1;
+}
+/* .cards__block */
+.cards__predictedprice {
+  margin-bottom: 0.5rem;
+  margin-left: 1rem;
+  flex-grow: 1;
 }
 
-.cards__item__text {
-  color: #252e48;
-  font-size: 18px;
-  line-height: 24px;
+.cards__btn {
+  border: none;
+  border-top: 1px solid #e2e8f0;
+  background-color: transparent;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: bold;
+  color: inherit;
+  width: 100%;
+  margin-bottom: 0.5rem;
+  margin-left: 0.5 rem;
+  margin-top: 0.5 rem;
+  cursor:pointer;
 }
-
-@media only screen and (min-width: 1200px) {
-  .content__blog__container {
-    width: 84%;
-  }
-}
-
-@media only screen and (min-width: 1024px) {
-  .cards__items {
-    display: flex;
-  }
-}
-
-@media only screen and (max-width: 1024px) {
-  .cards__item {
-    margin-bottom: 2rem;
-  }
+cards__btn :hover {
+  background-color: yellow;
 }
