--- a/src/components/GoogleMap.css
+++ b/src/components/GoogleMap.css
@@ -1,24 +1,82 @@
 .location-search-input{
-    width: 30%;
+    align-items: center;
+    flex-grow: 1;
     text-align: center;
-    height: 40px;
+    height: 5rem;
+    border: solid 2px;
+    margin-top: 1rem;
+    border-radius: 5px;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+}
+.SB_suggestions{
+  margin: 2rem;
+  display: grid;
+  width:100%;
+  grid-template-columns: 1fr;
+  justify-content: center;
+  flex-direction: column;
+    
+}
+.autocomplete-dropdown-container{
+    position: static;
+    font-size: medium;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+    color: rgb(5, 5, 5);
+    border-color: black;
     border: solid 2px;
 }
-.autocomplete-dropdown-container{
-    width: 30%;
-    text-align: left;
-    color: black;
+.suggestion.active{
+  position: absolute;
+  font-size: medium;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.map{
-    position: absolute;
-    top: 0px;
-    left: 30%;
-    bottom: 0px;
-    right: 0;
 
-}
-
-.autocomplete-dropdown-container{
-    position: absolute;
-}
+.main-page-wrapper {
+    margin: 15px;
+    background-color: rgba(243, 243, 243, 0);
+  }
+  
+  .row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  
+  .column-30 {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+    align-items: center;
+    margin-right: 1rem;
+    margin-left: 1rem;
+    background-color: blue;
+  }
+  .column-70 {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    margin-right: 1rem;
+    margin-left: 1rem;
+    flex: 2;
+  }
+  .map-container{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    margin-right: 1rem;
+    margin-left: 1rem;
+    min-height: 80vh; /*This sets the min height of the map to 80% of view height for responsive design*/
+  }
+  
+  
