--- a/src/components/GoogleMap.css
+++ b/src/components/GoogleMap.css
@@ -60,7 +60,7 @@
     align-items: center;
     margin-right: 1rem;
     margin-left: 1rem;
-    background-color: blue;
+    background-color: #355C7D;
   }
   .column-70 {
     display: flex;
@@ -79,4 +79,133 @@
     min-height: 80vh; /*This sets the min height of the map to 80% of view height for responsive design*/
   }
   
-  
+  .Banner{
+    display: flex;
+    justify-content: center;
+    background-color: #FF7582;
+    margin-right: 1rem;
+    margin-left: 1rem;
+  }
+
+  .Transport{
+    display: flex;
+    justify-content: center;
+    width: 33%;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  .Retail{
+    display: flex;
+    justify-content: center;   
+    width: 33%;
+    flex-wrap: wrap;
+  }
+
+  .Services{
+    display: flex;
+    justify-content: center; 
+    width: 33%;
+    flex-wrap: wrap;
+  }
+
+.indiv-ameneties{
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 0.5rem;
+}
+
+.transport-1{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  flex-direction: column;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.dropdown{
+  min-width: 15em;
+  position: relative;
+  margin: 2em;
+}
+
+.dropdown * {
+  box-sizing: border-box;
+}
+
+.select{
+  background: #2a2f3b;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 0.5em;
+  padding: 1em;
+  cursor: pointer;
+  transition: 0.3s;
+
+}
+
+.select-clicked{
+  border: 2px #26489a solid;
+  box-shadow: 0 0 0.8em #26489a;
+}
+
+.select:hover{
+  background: #323741;
+}
+
+.caret{
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 6px solid #fff;
+  transition: 0.3s;
+}
+
+.caret-rotate{
+  transform: rotate(180deg);
+}
+
+.menu{
+  list-style: none;
+  padding: 0.2em 0.5em;
+  background: #323741;
+  border: 1px #363a43 solid;
+  box-shadow: 0 0.5em 1em rgba(0,0,0,0.2);
+  border-radius: 0.5em;
+  color: #9fa5b5;
+  position: absolute;
+  top: 3em;
+  left: 50%;
+  width: 100%;
+  transform: translateX(-50%);
+  opacity: 0;
+  display: none;
+  transition: 0.2s;
+  z-index: 1;
+}
+
+.menu li {
+  padding: 0.7em 0.5em;
+  margin: 0.3em 0;
+  border-radius: 0.5em;
+  cursor: pointer;
+}
+
+.menu li:hover{
+  background: #2a2d35;
+}
+
+.active {
+  background: #23242a;
+}
+
+.menu-open{
+  display: block;
+  opacity: 1;
+}
+
+.Select-menu-outer{top: auto; bottom: 100%}
