feat: added endpoint for ComparisonView, added Models for ALL_FLAT db

--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -7,6 +7,7 @@
     <form method="get">
         <label for="searchVal" name="searchVal">Search For A Location</label>
         <input type="text" name="searchVal" id="searchVal">
+        <input type="text" name="flat_type" id="flat_type">
         <button type="submit">Search</button>
     </form>
     
